# cowvm

./: CMakeLists.txt  readme.md
cowvm/: cow.c  cow.h  main.c
cowvm/exec/: interp.c  interp.h
cowvm/lang/: block.h  builder.c  builder.h  function.c  function.h  instr_builder.h  instruction.h  opcode.h  type.h  value.h
cowvm/misc/data/: array.h  byte_writer.c  byte_writer.h  memory.h
